log
jue., 11 de may. de 2023 21:40:55: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:37:20: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    heap->heapArray = (heapElem **) calloc(3, sizeof(heapElem *));
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
1631ee6
jue., 11 de may. de 2023 21:41:07: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
020369b
jue., 11 de may. de 2023 23:04:44: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c0c1285
jue., 11 de may. de 2023 23:06:11: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
bfaa10c
jue., 11 de may. de 2023 23:52:42: 
 heap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:40:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
       pq->heapArray = (Heap *) realloc(pq->heapArray, pq->capac);
                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
acb6520
jue., 11 de may. de 2023 23:52:58: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|0
c01f83b
jue., 11 de may. de 2023 23:54:18: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|0
   [ INFO ] insertando dato con prioridad 7
f8a3775
jue., 11 de may. de 2023 23:55:23: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a7ba360
jue., 11 de may. de 2023 23:56:27: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|0
6d88d8d
